spacing issue

--- a/2-layout/global/_global_newsletter.scss
+++ b/2-layout/global/_global_newsletter.scss
@@ -27,7 +27,7 @@ section.global-newsletter{
   }
   @media (min-width: $tablet){
     .flex-item{
-      width: calc(33.33333333333% - 20px);
+      width: calc(33.33333333333% - 12px);
     }
     p{
       width: 40%;
